<resources>
    <string name="app_name">PhoneBook</string>
    <string name="action_settings">Settings</string>
    <string name="Contact_name">Contact Name</string>
    <string name="Contact_List">Contact List</string>
    <string name="Add_Contact">Add Contact</string>
    <string name="Add_Contact_information">Please enter the contact information</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Contact_number">Contact Number</string>
    <string name="Email">Email Address</string>
    <string name="Home_page">Website</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
